--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>欢迎你，请先登陆！</title>
     <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <link href="css/loginstyle.css" rel="stylesheet" type="text/css">
 
 </head>
