--- a/regist.html
+++ b/regist.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>注册</title>
     <script type="text/javascript" src="js/regist.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <link href="css/registstyle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
